# PerfectlyValidWards

./: .clang-format  .clang-format-ignore  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.template  LICENSE  README.md  vcpkg.json
cmake/: Packaging.cmake  XSEPlugin.cmake
cmake/ports/clib-util/: portfile.cmake
include/: PCH.h
src/: EventListener.cpp  EventListener.h  Hooks.cpp  Hooks.h  PCH.h  RE.h  Settings.h  WardManager.cpp  WardManager.h  XSEPlugin.cpp  main.cpp
